# fieldfitter

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: deploy.yaml
docs/: conf.py  index.rst
src/fieldfitter/: fitter.py
tests/: test_fieldfitter.py
tests/resources/: cube.exf  cube_data.exf
